apps/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: home.bisnaguete.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
  tls:
    - hosts:
        - home.bisnaguete.xyz
      secretName: glance-tls
